# chdb-rust

./: .gitignore  Cargo.toml  README.md  build.rs  update_libchdb.sh  wrapper.h
.github/workflows/: publish.yaml  rust.yml
docs/: examples.md
examples/: 01_stateless_queries.rs  02_stateful_sessions.rs  03_query_results.rs  04_output_formats.rs  05_reading_from_files.rs  06_error_handling.rs  07_analytics.rs  README.md  basic.rs  session.rs
src/: arg.rs  arrow_stream.rs  basic.rs  bindings.rs  builder.rs  connection.rs  error.rs  format.rs  lib.rs  log_level.rs  main.rs  query_result.rs  session.rs  test_utils.rs
tests/: arrow_stream.rs  examples.rs  logs.csv
tests/common/: mod.rs
