[package]
name = "chdb-rust"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tracing = { version="0.1", features=["log"] }


[build-dependencies]
bindgen = "0.65.1"

[dev-dependencies]
tracing-subscriber = { version="0.3.16", features=["env-filter"] }
clap = { version = "4", features = ["derive"] }
