[package]
name = "chdb-rust"
version = "1.3.1"
edition = "2021"
authors = ["Auxten"]
description = "chDB FFI bindings for Rust(Experimental)"
homepage = "https://github.com/chdb-io/chdb-rust"
repository = "https://github.com/chdb-io/chdb-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["clickhouse", "chdb", "database", "embedded", "analytics"]

[dependencies]
thiserror = "1"

[build-dependencies]
bindgen = "0.70.1"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
# docs.rs cannot download libchdb or link native libraries.
# Setting DOCS_RS env var tells build.rs to skip native build steps.
rustc-args = ["--cfg", "docsrs"]